test/translator/success/static.prez
class Base {
  static String test() {
    return "Base";
  }
}

class Derived : Base {
  static String test() {
    return Derived.test(false);
  }

  static String test(bool useBase) {
    return useBase ? Base.test() : "Derived";
  }
}


void main() {
  print(Base.test());
  print(Derived.test(true));
  print(Derived.test());
}
